--- a/css/app.styl
+++ b/css/app.styl
@@ -3,7 +3,7 @@ html
 
 body
   background-image: url("images/furley_bg.png");
-  padding-bottom: 100px
+  padding-bottom: 250px
   height: 100%
   font-familiy: "Helvetica Neue", Helvetica, Arial, sans-serif
 
@@ -53,8 +53,9 @@ body
     margin-top: 10px
     background-color: rgba(255,255,255,0.33)
     border: rgba(99,99,99,0.20) 1px dotted
-    
-    
+    &.selected
+      border-color: red
+
   table
     thead
       color: #006391
@@ -173,9 +174,7 @@ body
       text-align: left
     td:last-child
       text-align: right
-      
-      
-      
+
 .lightbox
   position: fixed; 
   
@@ -201,3 +200,18 @@ body
 @media (min-width: 900px)
   body
     padding-top: 60px
+
+
+@media print
+  body
+    padding-top: 0px
+    background: none
+    background-color: #fff
+
+    .navbar , .action_footer
+      display: none
+      
+    
+    
+    
+    
