--- a/views/app.jade
+++ b/views/app.jade
@@ -6,6 +6,8 @@ script(type='text/javascript', charset='utf-8')
     exports.app =  new App({ el: $(".appCanvas") , options: {app: '!{app}' , salesforceSession: null }});
   });
   
+.toolbar
+
 .appCanvas.container
 
 .lightboxCanvas
