--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,8 +12,9 @@ html(lang="en")
   
   head
     meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    
     //link(rel='stylesheet', href='/fonts.css', type='text/css', charset='utf-8')
     link(rel='stylesheet', href='/bootstrap.css', type='text/css', charset='utf-8')
 
@@ -31,6 +32,18 @@ html(lang="en")
    
     block scripts
       script(src='/application.js', type='text/javascript', charset='utf-8')
+
+    block.
+      <script type="text/javascript">
+        var _kmq = _kmq || [];
+        function _kms(u){
+          setTimeout(function(){
+          var s = document.createElement('script'); var f = document.getElementsByTagName('script')[0]; s.type = 'text/javascript'; s.async = true;
+          s.src = u; f.parentNode.insertBefore(s, f);
+          }, 1);
+        }
+        _kms('//i.kissmetrics.com/i.js');_kms('//doug1izaerwt3.cloudfront.net/b0b576ce3460c968aed2e8552a157956ef979f63.1.js');
+      </script>
 
   body(data-spy="scroll", class="")
     include header
