--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,6 @@ html(lang="en")
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     
-    //link(rel='stylesheet', href='/fonts.css', type='text/css', charset='utf-8')
     link(rel='stylesheet', href='/bootstrap.css', type='text/css', charset='utf-8')
 
     link(rel='stylesheet', href='/application.css', type='text/css', charset='utf-8')
@@ -45,6 +44,6 @@ html(lang="en")
         _kms('//i.kissmetrics.com/i.js');_kms('//doug1izaerwt3.cloudfront.net/b0b576ce3460c968aed2e8552a157956ef979f63.1.js');
       </script>
 
-  body(data-spy="scroll", class="")
+  body()
     include header
     != body
