--- a/css/app.styl
+++ b/css/app.styl
@@ -255,6 +255,30 @@ body
   body
     padding-top: 120px
 
+@media (max-width: 940px)
+  .appCanvas
+    padding-top: 40px
+
+  .toolbar
+    width: 100%;
+    height: 45px;
+    position: absolute;
+    border-radius: 4px;
+    border-color: #d5d5d5;
+    border-width: 0 0 1px; /* drop the border on the fixed edges */
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    background-color: #dfdfdf
+    -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+    -moz-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+    box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+    z-index: 900
+    .input_wrapper
+      margin-top: 2px
+      padding-left: 10px
+      width: 95%
+
 
 @media print
   body
