--- a/views/app.jade
+++ b/views/app.jade
@@ -7,10 +7,11 @@ script(type='text/javascript', charset='utf-8')
     exports.app =  new App({ el: $(".appCanvas") , options: { salesforceSession: null } });
   });
   
+header
+  
 .toolbar
 
 .appCanvas.container
 
 .lightboxCanvas
 
-//{user_id: "005A0000000f4mEIAQ" , instance_url: "https://cs11.salesforce.com" , token: "00DZ00000006AH5!ARUAQGAU1dKO7hLiUR8Rov2Ug2.BiueFZ6l22Cp0OwumzUJsafwdujhS.vrT28xzkSS2QpUwko7AioAdaOUr.fDlHJgMztTy"}
