--- a/css/bootstrap/variables.less
+++ b/css/bootstrap/variables.less
@@ -39,7 +39,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #006391;
+@linkColor:             #08c;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
@@ -81,7 +81,7 @@
 @btnWarningBackground:              lighten(@orange, 15%);
 @btnWarningBackgroundHighlight:     @orange;
 
-@btnDangerBackground:               #D94F00;
+@btnDangerBackground:               #ee5f5b;
 @btnDangerBackgroundHighlight:      #bd362f;
 
 @btnInverseBackground:              @gray;
