--- a/css/components/actionFooter.less
+++ b/css/components/actionFooter.less
@@ -3,10 +3,16 @@
   bottom: 0px;
   left: 0px;
   right: 0px;
-}
-.action_footer .modal-footer .btn.last {
-  float: left;
-}
-.action_footer .modal-footer .btn.next {
-  float: right;
+  padding: 8px 15px;
+  
+  .save,.send{
+    float:right;
+    padding: 8px 11px;
+  }
+  
+  .cancel{
+    float: left;
+    padding: 8px 11px;
+  }
+  
 }
