--- a/css/index.less
+++ b/css/index.less
@@ -1,36 +1,11 @@
 @import "./bootstrap/bootstrap.less";
-@import "./bootstrap/responsive.less";
 @import "./components/toolbar.less";
 @import "./components/actionFooter.less";
 @import "./components/lightbox.less";
 @import "./components/popupSelect.less";
-
-
-html {
-  height: 100%;
-}
-
-body {
-  background-image: url("images/furley_bg.png");
-  height: 92%;
-  font-familiy: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding-top: 120px;
-}
-
-a {
-  cursor: pointer;
-}
-
-.validatable{
-  width: 90%;
-}
-
-
-h5.preHeader {
-  color: #333;
-  font-size: 17px;
-  line-height: 12px;
-}
+@import "./components/header.less";
+@import "./general.less";
+@import "./responsive.less";
 
 
 
