--- a/css/components/toolbar.less
+++ b/css/components/toolbar.less
@@ -1,22 +1,17 @@
 .toolbar {
   width: 100%;
   height: 45px;
-  border-radius: 4px;
-  border-color: #d5d5d5;
-  border-width: 0 0 1px;
-/* drop the border on the fixed edges */
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,0.10);
-  -moz-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,0.10);
-  box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,0.10);
   position: fixed;
   top: 40px;
   left: 0;
   right: 0;
   z-index: 900;
-}
+  background-color: #f5f5f5;
+  border-top: 1px solid #ddd;
+ .box-shadow(0 1px 5px #999);
+ .clearfix(); // clear it in case folks use .pull-* classes on buttons
+ }
+ 
 .toolbar .nav {
   margin-bottom: 0px;
 }
