improvement of CSS , moved to LESS. Many changes

--- a/css/components/popupSelect.less
+++ b/css/components/popupSelect.less
@@ -1,5 +1,9 @@
 .clientes {
   position: relative;
+  .js_cliente_search{
+    width: 100%;
+  }
+
 }
 .clientes .clientes_list {
   max-height: 150px;
@@ -7,10 +11,10 @@
   background-color: #fff;
   position: absolute;
   top: 27px;
-  left: 4px;
+  left: 0px;
   z-index: 66;
   border: 1px solid #ccc;
-  width: 90%;
+  width: 100%;
 }
 .clientes .clientes_list li {
   cursor: pointer;
