--- a/css/general.less
+++ b/css/general.less
@@ -6,7 +6,10 @@ body {
   background-image: url("images/furley_bg.png");
   height: 92%;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding-bottom: 50px;
+}
+
+.app{
+  padding-bottom: 100px;
 }
 
 a {
@@ -32,3 +35,13 @@ h5.preHeader {
   .box-shadow(0 1px 5px #999);
 }
 
+.table-total{
+  width: 200px;
+  float: right;
+}
+
+table{
+  input{
+    margin-bottom: 0px;
+  }
+}
