--- a/css/index.less
+++ b/css/index.less
@@ -1,9 +1,9 @@
 @import "./bootstrap/bootstrap.less";
-@import "./components/toolbar.less";
-@import "./components/actionFooter.less";
 @import "./components/lightbox.less";
 @import "./components/popupSelect.less";
+@import "./components/menu.less";
 @import "./components/header.less";
+@import "./components/actionFooter.less";
 @import "./general.less";
 @import "./responsive.less";
 
