--- a/css/components/actionFooter.less
+++ b/css/components/actionFooter.less
@@ -1,10 +1,15 @@
-.action_footer .modal-footer {
+.action_footer{
   position: fixed;
   bottom: 0px;
   left: 0px;
   right: 0px;
-  padding: 8px 15px;
-  
+  padding: 0px;
+  z-index: 1040;
+
+  .modal-footer{
+    padding: 8px;
+  }
+
   .save,.send{
     float:right;
     padding: 8px 11px;
