--- a/views/app.jade
+++ b/views/app.jade
@@ -8,10 +8,8 @@ script(type='text/javascript', charset='utf-8')
   });
   
 header
-  
-.toolbar
 
-.appCanvas.container
+.appCanvas.container-fluid
 
 .lightboxCanvas
 
