--- a/css/general.less
+++ b/css/general.less
@@ -3,9 +3,11 @@ html {
 }
 
 body {
-  background-image: url("images/furley_bg.png");
   height: 92%;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  &.nice{
+    background-image: url("images/furley_bg.png");
+  }
 }
 
 .app{
