--- a/public/bootstrap.css
+++ b/public/bootstrap.css
@@ -7448,9 +7448,11 @@ html {
   height: 100%;
 }
 body {
-  background-image: url("images/furley_bg.png");
   height: 92%;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+body.nice {
+  background-image: url("images/furley_bg.png");
 }
 .app {
   padding-bottom: 100px;
