--- a/views/layout.jade
+++ b/views/layout.jade
@@ -43,5 +43,5 @@ html(lang="en")
         }
         _kms('//i.kissmetrics.com/i.js');_kms('//doug1izaerwt3.cloudfront.net/b0b576ce3460c968aed2e8552a157956ef979f63.1.js');
 
-  body()
+  body.nice
     != body
