--- a/views/app.jade
+++ b/views/app.jade
@@ -17,7 +17,7 @@ script(type='text/javascript', charset='utf-8')
   
 header
 
-.appCanvas.container-fluid
+.appCanvas.container
 
 .lightboxCanvas
 
