fixed bug on Session.LastUpdate and UI changes

--- a/css/bootstrap/variables.less
+++ b/css/bootstrap/variables.less
@@ -4,6 +4,10 @@
 
 
 
+@bodyMarginTop: 70px;
+@bodyTopBaseline: 40px;
+
+
 // GLOBAL VALUES
 // --------------------------------------------------
 
