--- a/css/index.less
+++ b/css/index.less
@@ -4,6 +4,7 @@
 @import "./components/menu.less";
 @import "./components/header.less";
 @import "./components/actionFooter.less";
+@import "./components/footer.less";
 @import "./general.less";
 @import "./responsive.less";
 
