--- a/views/app.jade
+++ b/views/app.jade
@@ -1,19 +1,3 @@
-script(type='text/javascript', charset='utf-8')
-  var jQuery  = require("jqueryify");
-  var exports = this;
-  jQuery(function(){
-    var App = require("index");
-    var ErrorManager = require("managers/errorManager");
-
-    var instance_url = "https://cs11.salesforce.com";
-    exports.app =  new App({ el: $(".appCanvas") , options: { salesforceSession: null } });
-
-    window.onerror = function (msg, url, num) {
-      ErrorManager.logError(msg) 
-    }
-    
-    
-  });
   
 header
 
@@ -21,3 +5,4 @@ header
 
 .lightboxCanvas
 
+footer
