--- a/css/components/header.less
+++ b/css/components/header.less
@@ -4,6 +4,32 @@ header{
     color: #fff;
   }
 
+  .navbar .brand {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    
+  }
+
+  .predefined_options{
+    padding-top: 10px;
+    font-size: 13px;
+  }
+
+  .header_menu{
+    >li{
+      padding-top: 5px;
+    }
+  }
+  .status_button{
+    height: 45px;
+  }
+  
+  input{
+    margin-top: 8px;
+    height: 19px;
+    color: #fff;
+  }
+
   .btn_icon{    
 
     i{
