--- a/css/components/header.less
+++ b/css/components/header.less
@@ -7,7 +7,9 @@ header{
   .navbar .brand {
     padding-top: 0px;
     padding-bottom: 0px;
-    
+    background-image: url("./images/logo_horizontal_white_on_black.png");
+    height:50px;
+    width: 80px;
   }
 
   .predefined_options{
